# juniper-rocket-sample-frontend

./: Cargo.toml  LICENSE  Makefile.toml  Procfile  README.md
.cargo-husky/hooks/: pre-commit
src/: main.rs
src/common/: helper.rs  mod.rs  response.rs
src/video/: model.rs  response.rs
static/: index.html
