[package]
name = "juniper-rocket-sample-frontend"
version = "0.1.0"
authors = ["Daichi Hioki <hiokidaichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "*"
yew = "*"
stdweb = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
cargo-husky = { version = "*", default-features = false, features = ["user-hooks"] }
